Update AUTHORS, ChangeLog, MAINTAINERS, NEWS, README, configure.ac

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 AUTHORS:
 
 Philippe Rouquier <bonfire-app@wanadoo.fr>
+Wen Bo <wenbo@kylinos.cn>
 
 Report bugs at:
-http://bugzilla.gnome.org/enter_bug.cgi?product=burner
+https://github.com/ukui/kylin-burner/issues
