--- a/NEWS
+++ b/NEWS
@@ -1,212 +1,2 @@
-* Burner 3.12.1
-        - Add a symbolic app icon
-        - Translation updates
-
-* Burner 3.12.0
-        - Fix crash in plugin dialog
-        - Translation updates
-
-* Burner 3.11.4
-        - Make desktop file validate
-        - Make appdata file validate
-        - Allow building with tracker 1.0
-        - Fix problem with constructors
-        - Translation updates
-
-* Burner 3.11.3
-        - Indonesian translation of help
-        - Support Tracker 0.18
-        - Translation updates
-        - Remove X session support (make Burner work under Wayland)
-
-* Burner 3.11.0
-        - Translation updates
-        - Include an appdata file
-
-* Burner 3.10.0
-        - Translation updates
-        - Fixed drawing issues in media selection combo boxes
-        - Fix several crashers
-        - Fixes for new autotools
-        - Disable audio normalisation - it's broken since GStreamer 1.0
-
-* Burner 3.8.0
-        - Documentation fixes
-        - Translation updates
-
-* Burner 3.7.91
-        - Add a question mark to a question
-        - Support notification filtering
-        - Remove nonexisting options from the man page
-        - Fix while loop in `burner_libisofs_write_image_to_fd_thread
-        - Translation updates
-
-* Burner 3.6.0
-	- Bump version to 3.6.0 (Tomas Bzatek)
-	- Fix build, link libburner-burn against libm (for ceil(3)) (Frédéric Péters)
-	- Translation updates
-
-* Burner 3.5.92
-	- Bump version to 3.5.92 (Tomas Bzatek)
-	- Fix build against gstreamer-plugins-base-1.0 (Tomas Bzatek)
-	- Fix build without preview (Tomas Bzatek)
-	- build: Require gstpbutils-1.0 instead of 0.10 (Tomas Bzatek)
-	- Port to new documentation infrastructure (Javier Jardón)
-	- Port burner to GStreamer 1.0 (Tim-Philipp Müller)
-	- burner-project: include libxml/xmlerror.h for xmlError (Tim-Philipp Müller)
-	- Put settings in the correct path (Robert Ancell)
-	- Add Desktop Actions for Unity (Jeremy Bicha)
-	- Translation updates
-
-* Burner 3.4.0
-	- Bump version to 3.4.0 (David King)
-	- Added Telugu to DOC_LINGUAS (Sasi Bhushan)
-	- Added Telugu help Translations (Sasi Bhushan)
-	- Updated Japanese translation. (Jiro Matsuzawa)
-	- Add initial Khmer translation (Khoem Sokhem)
-	- hindi translation by Chandan Kumar (Rajesh Ranjan)
-
-* Burner 3.3.92
-	- Bump version to 3.3.92 (David King)
-	- Malayalam translation updated by Sadiq and me (Praveen Arimbrathodiyil)
-	- Updated Kannada Translation (Shankar Prasad)
-	- Updated Kannada Translation (Shankar Prasad)
-	- Updated Norwegian bokmål translation (Kjartan Maraas)
-	- Fix formatting error in man page (Michael Biebl)
-	- Updated Norwegian bokmål translation (Kjartan Maraas)
-	- Updated Hungarian help translation (Gabor Kelemen)
-
-* Burner 3.3.91
-	- Bump version to 3.3.91 (David King)
-	- Updated Persian Translation (Arash Mousavi)
-	- Updated Belarusian translation. (Ihar Hrachyshka)
-	- Updated Norwegian bokmål translation (Kjartan Maraas)
-	- Update Czech help translation by Stepan Simsa (Petr Kovar)
-	- git.mk: update from 'canonical source' (Ryan Lortie)
-	- po: Added en_CA.po and updated LINGUAS file (Tiffany Antopolski)
-	- Call gettext() where translated string array items are used. (Gabor Kelemen)
-	- build: Support build against tracker 0.13/0.14 (Vincent Untz)
-	- Updated Galician doc translations (Fran Diéguez)
-	- Updated Dutch translation (Hannie Dumoleyn)
-	- Added lv for Latvian in Makefile.am in help. (Peteris Krisjanis)
-	- Added figure picture for Latvian help. (Peteris Krisjanis)
-	- Added Latvian translation for help by Matīss Jānis Āboltiņš. (Peteris Krisjanis)
-	- Updated Norwegian bokmål translation (Kjartan Maraas)
-	- Fixed typo in Arabic translation (Abderrahim Kitouni)
-	- Updated Slovenian translation (Andrej Žnidaršič)
-	- Updated French translation (Bruno Brouard)
-	- Updated French doc translation (Bruno Brouard)
-	- Updated Macedonian translation. (Jovan Naumovski)
-	- Updated Norwegian bokmål translation (Kjartan Maraas)
-	- Updated Slovenian translation (Matej Urbančič)
-	- Fix broken tags in Hungarian help translation. https://bugzilla.gnome.org/show_bug.cgi?id=666258 (Gabor Kelemen)
-	- [l10n]Added Brumese translation (Thura Hlaing)
-	- Updated Russian translation (Yuri Myasoedov)
-	- Updated Norwegian bokmål translation (Kjartan Maraas)
-	- [l10n] Updated German doc translation (Mario Blättermann)
-	- Updated Spanish translation (Daniel Mustieles)
-	- Updated Spanish translation (Daniel Mustieles)
-	- Created page for Integrity Checking tool (Paulina Gonzalez)
-	- Updated Spanish translation (Daniel Mustieles)
-	- [l10n] Updated German doc translation (Gabor Karsay)
-	- Updated Polish translation of help (Aleksander Łukasiewicz)
-	- Fixed typo in split-track.page (Ekaterina Gerasimova)
-	- Add a fix for optical drive not selected by default. (Luis Medinas)
-	- Updated Belarusian translation. (Ihar Hrachyshka)
-	- Updated Hungarian translation (Gabor Kelemen)
-	- Updated Hungarian translation (Gabor Kelemen)
-	- Updated Hungarian help translation (Gabor Kelemen)
-	- Updated Spanish translation (Jorge González)
-	- Updated Spanish translation (Jorge González)
-	- Updated French doc translation (Bruno Brouard)
-	- Honor aclocal flags, bug 641650 (Craig Keogh)
-	- Correct CD cover dimensions, bug 660918 (Erling A. Jacobsen)
-	- Update categories in burner.desktop (Vincent Untz)
-	- Use g_mkdtemp() rather than mkdtemp(), bug 623890 (David King)
-	- Link with uninstalled libraries, not system ones (Mike Auty)
-
-* Burner 3.2.0
-  	- Bump to 3.2.0 (Luis Medinas)
-        - Updated Traditional Chinese translation(Hong Kong and Taiwan) (Chao-Hsiung Liao)
-        - Updated Galician translations (Fran Dieguez)
-        - [l10n] Updated German doc translation (Mario Bl<C3><A4>ttermann)
-        - [l10n] Updated German doc translation (Mario Bl<C3><A4>ttermann)
-        - [l10n] Changed screenshot for German doc translation (Mario Bl<C3><A4>ttermann)
-        - Added Korean doc translation (Seong-ho Cho)
-
-* Burner 3.1.92
-	- Bump to 3.1.92 (Luis Medinas)
-        - build: Support tracker 0.11/0.12 (Vincent Untz)
-        - Updated Belarusian translation (some fixes after manual testing). (Ihar Hrachyshka)
-        - Updated Japanese translation (Jiro Matsuzawa)
-        - Updated Spanish translation (dmustieles)
-        - Updated Spanish translation (Daniel Mustieles)
-        - Updated galician translations (Fran Dieguez)
-        - Updated Persian translation (Arash Mousavi)
-        - Updated Persian translation (Arash Mousavi)
-        - Updated Spanish translation (Jorge González)
-        - Updated Spanish translation (Jorge González)
-        - Fixed one string (Jorge González)
-        - Updated Spanish translation (Jorge González)
-        - Updated Spanish translation (Jorge González)
-        - String was not necessary (Jorge González)
-        - Fixed two strings (Jorge González)
-        - Make maintiner mode enabled by default (Javier Jardón)
-        - Updated Spanish translation (Jorge González)
-        - [l10n] Updated German doc translation (Mario Blättermann)
-        - Updated Spanish translation (dmustieles)
-        - configure.in: Remove gconf dependency (Javier Jardón)
-        - Updated Spanish translation (Jorge González)
-        - Updated Spanish translation (Jorge González)
-        - Updated Spanish translation (dmustieles)
-        - Updated Spanish translation (Jorge González)
-        - Updated Spanish translation (Jorge González)
-        - Rewrote help in Mallard (Ekaterina Gerasimova)
-        - Updated Lithuanian translation (Aurimas Černius)
-        - Updated Belarusian translation. (Ihar Hrachyshka)
-        - build: fix a build warning (Cosimo Cecchi)
-        - all: switch to g_format_size() (Cosimo Cecchi)
-        - Updated POTFILES.in (Piotr Drąg)
-        - Adapt configure for tracker-sparql. (Luis Medinas)
-        - Use libtracker-sparql instead of libtracker-client since it's deprecated. Fixes bgo #651630. (Luis Medinas)
-        - Updated Belarusian translation. (Ihar Hrachyshka)
-        - Remove beagle from Burner. Fixes bgo #657313 and #639257. (Luis Medinas)
-        - Updated Japanese translation (OKANO Takayoshi) 
-	- Updated Norwegian bokmål translation (Kjartan Maraas)
-        - Revert "build: add checks for beagle libraryies to configure as it is used in the code" (Stefan Sauer)
-        - build: add checks for beagle libraryies to configure as it is used in the code (Stefan Sauer)
-        - Make Burner build with tracker 0.10. 0.8 is older enough and shouldn't be available in any system with GNOME 3.2. 
-	  This is a tempory fix.
-        - Fix bgo #649178 - Wrong semi-colon in burner-nautilus.desktop. (Luis Medinas)
-        - Fix Documenters list in the About Dialog. Fixes bgo #646112. Added myself to Application authors (Luis Medinas)
- 
-
-Homepage: http://www.gnome.org/projects/burner
-
-Please report bugs to: http://bugzilla.gnome.org/browse.cgi?product=burner
-
-Mailing List for User and Developer discussion: burner-list@gnome.org
-
-GIT Repository: http://git.gnome.org/cgit/burner/
-
-Thanks to all the people who contributed to this release through patches, translation, advices, artwork, bug reports.
-
-
-4/10/2010 : 2.91.0
-
-Development release
-
-Move to a GTK+3 build only - now depend on 2.91.0 - (Philippe Rouquier)
-Move to the new rendering scheme of GTK+3.0 (Kjartan Maraas and Philippe Rouquier)
-Improved the "choose your background dialog" in the cover editor (Philippe Rouquier)
-Removed the logo for the front page (Philippe Rouquier)
-
-Homepage: http://www.gnome.org/projects/burner
-
-Please report bugs to: http://bugzilla.gnome.org/browse.cgi?product=burner
-
-Mailing List for User and Developer discussion: burner-list@gnome.org
-
-GIT Repository: http://git.gnome.org/cgit/burner/
-
-Thanks to all the people who contributed to this release through patches, translation, advices, artwork, bug reports.
+* Kylin-Burner 1.0.0
+        - Initial release.
