--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Burner is a CD/DVD mastering tool for the GNOME Desktop. It is designed to be simple and easy to use. 
+Kylin Burner is a CD/DVD mastering tool for the UKUI Desktop. It is designed to be simple and easy to use.
 
 Features:
 
@@ -15,7 +15,7 @@ Audio CD:
 - supports the edition of CD-TEXT information
 - can burn audio CD on the fly
 - can use all audio files handled by GStreamer local installation (ogg, flac, mp3, ...)
-- can search for audio files inside dropped folders 
+- can search for audio files inside dropped folders
 - can insert a pause
 - can split a track
 
