--- a/po/ast.po
+++ b/po/ast.po
@@ -1541,7 +1541,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "Dexar el discu _abiertu pa amosar otros ficheros dempués"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "Permitir amestar más datos al discu más sero"
 
 #: ../libburner-burn/burner-drive-properties.c:751
