--- a/po/cs.po
+++ b/po/cs.po
@@ -1472,7 +1472,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "_Neuzavírat disk, aby bylo možno později přidat další soubory"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "Umožní přidat další data na disk později"
 
 #: ../libburner-burn/burner-drive-properties.c:751
