--- a/po/el.po
+++ b/po/el.po
@@ -1500,7 +1500,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "Να μείνει ο δίσκος α_νοικτός για προσθήκη άλλων αρχείων αργότερα"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "Να επιτρέπεται η προσθήκη δεδομένων στο δίσκο αργότερα"
 
 #: ../libburner-burn/burner-drive-properties.c:751
