--- a/po/ga.po
+++ b/po/ga.po
@@ -1368,7 +1368,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "Fág an diosca ar _oscailt chun comhaid eile a chur leis ar ball"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr ""
 
 #: ../libburner-burn/burner-drive-properties.c:751
