--- a/po/ja.po
+++ b/po/ja.po
@@ -1324,7 +1324,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "書き込みが完了した後もディスクを開いたままにする(_O)"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "あとで他のファイルやデータを追加するためにディスクを開いたままにします"
 
 #: ../libburner-burn/burner-drive-properties.c:751
