--- a/po/kn.po
+++ b/po/kn.po
@@ -1498,7 +1498,7 @@ msgstr ""
 "ಡಿಸ್ಕಿಗೆ ನಂತರದ ಸಮಯದಲ್ಲಿ ಬೇರೆ ಕಡತಗಳನ್ನು ಸೇರಿಸುವ ಸಲುವಾಗಿ ಹಾಗೆಯೆ ತೆರೆದಿಡು(_o)"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "ಡಿಸ್ಕಿಗೆ ಇನ್ನಷ್ಟು ದತ್ತಾಂಶವನ್ನು ಸೇರಿಸುವುದನ್ನು ಅನುಮತಿಸು"
 
 #: ../libburner-burn/burner-drive-properties.c:751
