--- a/po/ms.po
+++ b/po/ms.po
@@ -1539,7 +1539,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr ""
 
 #: ../libburner-burn/burner-drive-properties.c:739
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr ""
 
 #: ../libburner-burn/burner-drive-properties.c:759
