--- a/po/nb.po
+++ b/po/nb.po
@@ -1476,7 +1476,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "La platen være _åpen for å kunne legge til andre filer senere"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "Gjør det mulig å legge til mer data på platen senere"
 
 #: ../libburner-burn/burner-drive-properties.c:751
