--- a/po/sl.po
+++ b/po/sl.po
@@ -1468,7 +1468,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "Pusti zapis _odprt za kasnejše dodajanje datotek"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "Dovoli kasnejše dodajanje podatkov na disk"
 
 #: ../libburner-burn/burner-drive-properties.c:751
