--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -1457,7 +1457,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "_Ostavi otvoren disk za kasnije dodavanje datoteka"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "Dozvoljava kasnije dodavanje podataka na disk"
 
 #: ../libburner-burn/burner-drive-properties.c:751
