--- a/po/th.po
+++ b/po/th.po
@@ -1392,7 +1392,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "ไม่ต้องเขียน_ปิดแผ่น เพื่อเพิ่มแฟ้มต่อในภายหลัง"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "อนุญาตให้เพิ่มข้อมูลลงแผ่นในภายหลัง"
 
 #: ../libburner-burn/burner-drive-properties.c:751
