--- a/po/ug.po
+++ b/po/ug.po
@@ -1369,7 +1369,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "يېزىپ بولغاندىن كېيىنمۇ يەنە ئوچۇق ھالەتتە قوي(_O)"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "كېيىن يەنە باشقا سانلىق-مەلۇماتلارنى يازغىلى بولىدۇ"
 
 #: ../libburner-burn/burner-drive-properties.c:751
