--- a/po/ca@valencia.po
+++ b/po/ca@valencia.po
@@ -1481,7 +1481,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "Deixa el disc _obert per afegir-hi altres fitxers més avant"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "Permet afegir més dades al disc més avant"
 
 #: ../libburner-burn/burner-drive-properties.c:751
