--- a/po/he.po
+++ b/po/he.po
@@ -1437,7 +1437,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "השאר את התקליטור _פתוח כדי להוסיף קבצים מאוחר יותר"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "אפשר הוספת נתונים נוספים לתקליטור מאוחר יותר"
 
 #: ../libburner-burn/burner-drive-properties.c:751
