--- a/po/hu.po
+++ b/po/hu.po
@@ -1468,7 +1468,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "A lemez _nyitva hagyása, további fájlok későbbi hozzáadásához"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "Lehetővé teszi a jövőben további adatok hozzáadását a lemezhez"
 
 #: ../libburner-burn/burner-drive-properties.c:751
