--- a/po/it.po
+++ b/po/it.po
@@ -1502,7 +1502,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "_Lasciare il disco aperto per aggiungere altri file successivamente"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "Consente di aggiungere altri dati in un secondo momento"
 
 #: ../libburner-burn/burner-drive-properties.c:751
