--- a/po/mai.po
+++ b/po/mai.po
@@ -2523,7 +2523,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr ""
 
 #: ../src/burner-drive-properties.c:579
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr ""
 
 #: ../src/burner-drive-properties.c:600
