--- a/po/uk.po
+++ b/po/uk.po
@@ -1464,7 +1464,7 @@ msgid "Leave the disc _open to add other files later"
 msgstr "_Залишити диск відкритим для подальшого додавання файлів"
 
 #: ../libburner-burn/burner-drive-properties.c:731
-msgid "Allow to add more data to the disc later"
+msgid "Allow one to add more data to the disc later"
 msgstr "Дозволити подальше додавання даних на диск"
 
 #: ../libburner-burn/burner-drive-properties.c:751
