--- a/docs/burner.1
+++ b/docs/burner.1
@@ -14,7 +14,7 @@ This manual page documents briefly the
 command.
 .PP
 \fBBurner\fP is a disc burning application. It is designed to be simple and easy to use.
-It allows to create data CD/DVD, audio CD, to copy CD/DVD and to burn images. It has some nices features, such as a song, image and video previewer. It can also search for files (thanks to beagle) and display a playlist and its contents.
+It allows one to create data CD/DVD, audio CD, to copy CD/DVD and to burn images. It has some nices features, such as a song, image and video previewer. It can also search for files (thanks to beagle) and display a playlist and its contents.
 .SH OPTIONS
 This program follows the usual GNU command line syntax, with long options starting with two dashes (`-'). A summary of options is included below.
 For a complete description, see the Info files.
