Fix function file filter

--- a/po/zh_CN/k3b.po
+++ b/po/zh_CN/k3b.po
@@ -10379,6 +10379,9 @@ msgstr "清空"
 msgid "New Dir"
 msgstr "新建文件夹"
 
+msgid "FileFilter"
+msgstr "查看过滤文件"
+
 msgid ", remaining available space"
 msgstr ", 剩余空间"
 
